--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,7 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './partials/header';
+@import './partials/main';
+@import './partials/footer';
+@import './partials/modal';
