Добавляет свг-иконки

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,11 @@
 <header class="header">
   <a href="" class="header__logo"
-    ><svg class="logo__image"></svg><span class="logo__text">Filmoteka</span></a
+    ><svg class="logo__image" width="24" height="24"><use href="../src/images/icons.svg#icon-film"></use></svg><span class="logo__text">Filmoteka</span></a
   >
   <a href="" class="header__home-link">Home</a>
   <a href="" class="header__my-library-link">My library</a>
 </header>
 <label for="">
     <input type="text" class="header__input" name="search">
+    <button type="submit" class="search-btn"><svg width="12" height="12"><use href="../src/images/icons.svg#icon-search"></use></svg></button>
 </label>
