correct css classes

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,3 +1,5 @@
 <section class="main">
-  <div class="main__wrapper"><ul class="main__container"></ul></div>
+  <div class="wrapper">
+    <ul class="film-list"></ul>
+  </div>
 </section>
