Добавляет стили на хэдер

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -5,11 +5,13 @@
         <use href="../src/images/icons.svg#icon-film"></use></svg
       ><span class="logo__text">Filmoteka</span></a
     >
-    <a href="" class="header__home-link">Home</a>
-    <a href="" class="header__my-library-link">My library</a>
+    <ul class="header__links">
+    <li><a href="" class="header__home-link">Home</a></li>
+    <li><a href="" class="header__my-library-link">My library</a></li>
+  
   </div>
-  <label for="">
-    <input type="text" class="header__input" name="search" />
+  <label class="header__input-label">
+    <input type="text" class="header__input" name="search" placeholder="Поиск фильмов"/>
     <button type="submit" class="search-btn">
       <svg width="12" height="12"><use href="../src/images/icons.svg#icon-search"></use></svg>
     </button>
