футер подлатал, убрал для хедера и футера дублирование тегов в основной структуре.остались инлуды там на месте футера и хедера

--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -9,8 +9,8 @@ html {
   }
   
   body {
-    color: $primary-text-color;
-    font-family: $primary-font;
+    color: $black-color;
+    font-family: $font;
     letter-spacing: 0.03em;
   }
   h1,
