--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -28,6 +28,9 @@ html {
     max-width: 100%;
     height: auto;
   }
+  ul, ol {
+    list-style: none;
+  }
 
   .visually-hidden {
     position: absolute;
@@ -38,4 +41,19 @@ html {
     overflow: hidden;
     border: 0;
     clip: rect(0 0 0 0);
+  }
+  .wrapper {
+    margin: 0 auto;
+    padding: 0 20px;
+    min-width: 320px;
+    max-width: 480px;
+    //   background-color: green;
+    @media screen and (min-width: 768px) {
+      padding: 0 75px;
+      max-width: 768px;
+    }
+    @media screen and (min-width: 1024px) {
+      padding: 0 71px;
+      max-width: 1024px;
+    }
   }
