--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,8 +1,8 @@
 <footer class="footer">
-  <div class="footer__contain">
+  <div class="wrapper">
     <p class="footer__text">
       &#169; 2021 | All Rights Reserved | Developed with<span>
-        <svg class="footer__icon" width="14" height="13">
+        <svg width="14" height="13">
           <use href="../src/images/icons.svg#icon-love"></use>
         </svg></span>by
       <a class="footer__link" href="./">GoIT Students</a>
