--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -2,23 +2,12 @@
   margin-left: auto;
   margin-right: auto;
   background-color: $sec-bg-color;
-
-  //
-}
-.footer__contain {
-  margin: 0 auto;
-  padding: 29px 30px 30px 30px;
-  max-width: 320px;
-  
-  //   background-color: green;
+  padding: 29px 0 30px 0;
   @media screen and (min-width: 768px) {
-    padding: 30px 0 28px 0;
-    max-width: 768px;
-  }
-  @media screen and (min-width: 1024px) {
-    max-width: 1024px;
-  }
+        padding: 30px 0 28px 0;
+      }
 }
+
 .footer__text {
   font-family: $font;
   font-size: 14px;
@@ -28,24 +17,29 @@
   color: $gray-color;
   &>span {
     margin: 0 10px 0 10px;
+    display: inline-flex;
+    vertical-align: middle;
+    &>svg {
+        fill: $orange-color;
+    }
+    
+}
+@media screen and (max-width: 767px) {
+    max-width: 250px;
+    margin: 0 auto;
 }
   @media screen and (min-width: 768px) {
     font-size: 16px;
     line-height: 1.19;
-    
-    // max-width: 60%;
   }
 }
 .footer__link {
   color: $gray-color;
   @media screen and (min-width: 768px) {
     font-size: 16px;
-    // max-width: 60%;
   }
 }
 
-.footer__icon {
-  fill: $orange-color;
- 
- 
-}
+// .footer__icon {
+//   fill: $orange-color;
+// }
