--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,3 +10,5 @@
 @import './partials/footer';
 @import './partials/modal';
 @import './partials/trailer-modal';
+@import './partials/film-card-template';
+
