--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -30,6 +30,9 @@ html {
   }
   ul, ol {
     list-style: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
   }
 
   .visually-hidden {
