--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -59,4 +59,8 @@ html {
       padding: 0 71px;
       max-width: 1024px;
     }
+    @media screen and (min-width: 1440px) {
+      padding: 0 71px;
+      max-width: 1440px;
+    }
   }
