--- a/src/sass/partials/_film-card-template.scss
+++ b/src/sass/partials/_film-card-template.scss
@@ -36,13 +36,19 @@
 .list-item__link {
     display: block;
     text-decoration: none;
+    height: 100%;
 
-    
+    &:hover,
+    &:focus {
+        box-shadow:10px 10px 50px rgba(128, 128, 128, 0.719);
+        border-radius: 5px; 
+    }
+   
 }
 
 .list-item__thumb {
-    height: 440px;
-    border-radius: 5px;
+    height: 400px;
+    border-radius: 5px 5px 0 0;
     overflow: hidden;
 }
 
@@ -60,6 +66,9 @@
 
 .list-item__content {
     padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+
     font-weight: 500;
     font-size: 12px;
     line-height: 1.17;
