--- a/src/sass/partials/_film-card-template.scss
+++ b/src/sass/partials/_film-card-template.scss
@@ -37,7 +37,7 @@
     display: block;
     text-decoration: none;
     height: 100%;
-
+    transition: .3s;
     &:hover,
     &:focus {
         box-shadow:10px 10px 50px rgba(128, 128, 128, 0.719);
@@ -51,13 +51,16 @@
     border-radius: 5px 5px 0 0;
     overflow: hidden;
     background-image: url(../images/default_image.jpg);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .list-item__img {
     height: 100%;
-
+    width: 100%;
     transform: scale(1);
     transition: transform 500ms ease-out;
+    object-fit: fill;
 
     &:hover,
     &:focus {
