--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,5 @@
 <header class='header'>
+<div class="wrapper">
   <div class='header__links-container'>
     <a href='#' class='header__logo'>
       <svg class='logo__image' width='24' height='24'>
@@ -24,4 +25,5 @@
       </svg>
     </button>
   </form>
+  </div>
 </header>
