--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -27,7 +27,8 @@
       </tbody>
     </table>
   </div>
-
+<button class="add-btn">add to Watched</button>
+<button class="add-btn add-btn--queue">add to queue</button>
 </div>
 
 <div class="overlay js-modal-overlay"></div>
