add data to modal

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,35 +1,10 @@
-<a href="#" class="modal__link js-modal-open" data-modal="card-film"></a>
+<a href="#" class="modal__link js-info-modal-open" data-modal="card-film"></a>
 
-<div class="modal js-modal" data-modal="card-film">
-
-  <img class="js-modal-close close-cross" src="#">
-  <div class="modal__card-img">
-    <img src="#" alt="card-film" class="modal__img">
-  </div>
-  <div class="modal__table-wrap">
-    <table class="modal__table">
-      <tbody>
-      <tr>
-        <th colspan="2">Title</th>
-      </tr>
-      <tr>
-        <th>Vote / Votes</th><td><span>vote number</span>/  votes number</td>
-      </tr>
-      <tr>
-        <th>Popularity</th><td>value</td>
-      </tr>
-      <tr>
-        <th>Original Title</th><td>Original Title</td>
-      </tr>
-      <tr>
-        <th>Genre</th><td>Smart</td>
-      </tr>
-      </tbody>
-    </table>
-  </div>
-<button class="add-btn">add to Watched</button>
-<button class="add-btn add-btn--queue">add to queue</button>
+<div class="modal js-info-modal" data-info-modal="card-film">
+  <img class="js-info-modal-close close-cross" src="" />
+  <div class="info-modal-wrapper"></div>
+  <button class="add-btn">add to Watched</button>
+  <button class="add-btn add-btn--queue">add to queue</button>
 </div>
 
-<div class="overlay js-modal-overlay"></div>
-
+<div class="overlay js-info-modal-overlay"></div>
