--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -7,13 +7,13 @@
 //  text-decoration: none;
 //}
 
-.modal{
+.modal {
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 280px;
-  height: 958px;
-  transform: translate(-50%,-50%);
+  // width: 280px;
+  // height: 958px;
+  transform: translate(-50%, -50%);
   border: 1px solid #000;
   padding: 10px;
   z-index: 20;
@@ -28,24 +28,22 @@
   width: 100%;
   height: 100%;
   z-index: 10;
-  background-color: rgba(0,0,0,.4);
+  background-color: rgba(0, 0, 0, 0.4);
   display: none;
 }
 
-
-.modal.is-show,
-.overlay.is-show{
+.modal.is-shown,
+.overlay.is-shown {
   display: block;
 }
 
-.close-cross{
+.close-cross {
   position: absolute;
   top: 20px;
   right: 20px;
   width: 20px;
   height: 20px;
   cursor: pointer;
-
 }
 .modal__table-wrap {
   margin-bottom: 21px;
@@ -53,24 +51,23 @@
 .add-btn {
   display: flexbox;
 
-font-size: 12px;
+  font-size: 12px;
 
-line-height: 1.33;
-width: 112px;
-height: 44px;
-border-radius: 5px;
-padding: 0;
-margin-right: 15px;
-background-color: $orange-color;
-&:last-child {
-  margin-right: 0px;
-  background-color: $white-color;
+  line-height: 1.33;
+  width: 112px;
+  height: 44px;
+  border-radius: 5px;
+  padding: 0;
+  margin-right: 15px;
+  background-color: $orange-color;
+  &:last-child {
+    margin-right: 0px;
+    background-color: $white-color;
+  }
+  @media screen and (min-width: 768px) {
+    width: 125px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 136px;
+  }
 }
-@media screen and (min-width: 768px) {
-  width: 125px;
-}
-@media screen and (min-width: 1024px) {
-  width: 136px;
-}
-}
-
