--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -3,8 +3,10 @@
 <div class="modal js-info-modal" data-info-modal="card-film">
   <img class="js-info-modal-close close-cross" src="" />
   <div class="info-modal-wrapper"></div>
-  <button class="add-btn">add to Watched</button>
-  <button class="add-btn add-btn--queue">add to queue</button>
+ <div class="modal-btns">
+   <button class="add-btn">add to Watched</button>
+  <button class="add-btn">add to queue</button>
+ </div> 
 </div>
 
 <div class="overlay js-info-modal-overlay"></div>
