добавил сохранение фильмов для рендеринга библиотеки
добавил пару рефов для модалки в файл с рефами, пока без локал стореджа завтра думаю на работе его сделаю. сейчас все сохраняется в переменные и консолится.

--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -48,7 +48,7 @@
 .modal__table-wrap {
   margin-bottom: 21px;
 }
-.modal-btns {
+.modal-add-btns {
   display: flex;
   justify-content: center;
 }
