create modal for trailer

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -3,8 +3,9 @@
 <div class="modal js-info-modal" data-info-modal="card-film">
   <img class="js-info-modal-close close-cross" src="" />
   <div class="info-modal-wrapper"></div>
-  <button class="add-btn">add to Watched</button>
-  <button class="add-btn add-btn--queue">add to queue</button>
+  <button class="add-btn watched-btn">Add to watched</button>
+  <button class="add-btn queue-btn">Add to queue</button>
+  <button class="add-btn trailer-btn">Trailer</button>
 </div>
 
 <div class="overlay js-info-modal-overlay"></div>
