Добавляет скрипты для хэдера

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header header--my-library">
+<header class="header">
   <div class="wrapper">
     <div class="header__links-container">
       <a href="#" class="header__logo">
@@ -29,8 +29,8 @@
       </div>
     </form>
     <div class="header__button-container">
-      <button class="header__button">Watched</button>
-      <button class="header__button">Queue</button>
+      <button class="header__button watched-btn header__button--active">Watched</button>
+      <button class="header__button queue-btn">Queue</button>
     </div>
   </div>
 </header>
