check original title, genres, trailer exsistance

--- a/src/partials/trailer-modal.html
+++ b/src/partials/trailer-modal.html
@@ -4,6 +4,7 @@
       <svg class="close-button__icon" width="18px" height="18px">
         <use href="./images/icons.svg#icon-love"></use>
       </svg>
+      <div class="trailer__thumb"></div>
     </button>
   </div>
 </div>
