--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,12 +1,12 @@
 <a href="#" class="modal__link js-info-modal-open" data-modal="card-film"></a>
 
+<div class="overlay js-info-modal-overlay"></div>
 <div class="modal js-info-modal" data-info-modal="card-film">
-  <img class="js-info-modal-close close-cross" src="" />
+  <img class="js-info-modal-close close-cross" src="#" />
   <div class="info-modal-wrapper"></div>
   <div class="modal-add-btns">
     <button class="add-btn watched-btn" id="add-watched">Add to watched</button>
     <button class="add-btn queue-btn" id="add-queue">Add to queue</button>
     <button class="add-btn trailer-btn">Trailer</button>
   </div>
-  <div class="overlay js-info-modal-overlay"></div>
 </div>
