add pagination without save state for button home and logo

--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -2,5 +2,6 @@
   <div class="wrapper">
     <h1 class="visually-hidden">Filmoteka</h1>
     <ul class="film-list"></ul>
+    <div id="tui-pagination-container" class="tui-pagination tui-pagination--js"></div>
   </div>
 </section>
