--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,4 +11,5 @@
 @import './partials/modal';
 @import './partials/trailer-modal';
 @import './partials/film-card-template';
+@import './partials/pagination';
 
