--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -1,24 +1,67 @@
-//.modal__link{
-//  padding: 10px 10px;
-//  display: inline-block;
-//  //background-color: #444;
-//  color: #fff;
-//  border-radius: 3px;
-//  text-decoration: none;
-//}
+.body-hidden{
+  overflow-y: hidden;
+}
 
 .modal {
   position: fixed;
   top: 50%;
   left: 50%;
-  min-width: 280px;
-  // height: 958px;
+  width: 280px;
+  @media screen and (min-width: 768px) {
+    width: 618px;
+
+  }
+  @media screen and(min-width: 1024px){
+    width: 882px;
+  }
   transform: translate(-50%, -50%);
   border: 1px solid #000;
   padding: 10px;
   z-index: 20;
   background-color: white;
   display: none;
+}
+
+.modal__img{
+  border-radius: 5px;
+}
+
+.modal__card-img{
+  @media screen and (min-width: 768px) {
+    width: 294px;
+    margin-right: 30px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 396px;
+
+  }
+}
+
+.modal__table-wrap{
+  margin-top: 30px;
+  @media screen and (min-width: 768px) {
+    width: 294px;
+    margin-top: 0px;
+  }
+  @media screen and (min-width: 1024px) {
+    width: 396px;
+
+  }
+}
+
+
+.info-modal-wrapper{
+  @media screen and (min-width: 768px){
+    display: flex;
+
+  }
+  margin-top: 30px;
+}
+
+
+
+.about{
+  margin-top: 20px;
 }
 
 .overlay {
@@ -39,8 +82,8 @@
 
 .close-cross {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 10px;
+  right: 10px;
   width: 20px;
   height: 20px;
   cursor: pointer;
@@ -53,6 +96,10 @@
 .modal-add-btns {
   display: flex;
   justify-content: center;
+  @media screen and(min-width: 768px) {
+    justify-content: center;
+    margin-top: 20px;
+  }
 }
 .add-btn {
   display: flex;
@@ -67,10 +114,13 @@
   border-radius: 5px;
   padding: 0;
   margin-right: 15px;
+  @media screen and(min-width: 768px){
+    margin-right: 35px;
+  }
   background-color: $orange-color;
   border: none;
   transition: box-shadow 250ms cubic-bezier(.17,.67,.83,.67);
-  
+
   &.queue-btn {
     margin-right: 15px;
     background-color: $white-color;
@@ -78,11 +128,11 @@
     margin: 0;
   }
   &.trailer-btn {
-    margin: 15px auto 0 auto;
+    //margin: 0px auto 0 auto;
     background-color: $black-color;
     color: $white-color;
     border: 1px solid $black-color;
-    
+
   }
   &:hover, :focus {
     box-shadow: 0px 0px 10px 5px rgba(247, 133, 4, 0.5);
@@ -96,6 +146,6 @@
   }
   @media screen and (max-width: 480px) {
     padding: 0 15px;
-    
+
   }
 }
