Правит ссылки в хедере и добавляет слушателей события на кнопки в библиотеке пользователя

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -29,8 +29,8 @@
       </div>
     </form>
     <div class="header__button-container">
-      <button class="header__button watched-btn header__button--active">Watched</button>
-      <button class="header__button queue-btn">Queue</button>
+      <button class="header__button show-watched-btn header__button--active">Watched</button>
+      <button class="header__button show-queue-btn">Queue</button>
     </div>
   </div>
 </header>
