--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -4,7 +4,7 @@
 
 .modal {
   @media screen and (max-width: 767px) {
-    max-height: 100%;
+    max-height: 95vh;
     overflow-y: scroll;
   }
   position: fixed;
@@ -20,7 +20,7 @@
     height: 568px;
   }
   transform: translate(-50%, -50%);
-  border: 1px solid #000;
+  //border: 1px solid #000;
   padding: 10px;
   z-index: 20;
   background-color: white;
@@ -29,7 +29,7 @@
 
 .modal__img{
   @media screen and (min-width: 1024px) {
-    object-fit: cover;
+    object-fit: fill;
     display: block;
     width: 100%;
     height: 446px;
