--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <div class="wrapper">
+  <!-- <div class="wrapper"> -->
     <div class="header__links-container">
       <a href="#" class="header__logo">
         <svg class="logo__image" width="24" height="24">
@@ -33,5 +33,5 @@
       </button>
       <button class="header__button show-queue-btn" type="button">Queue</button>
     </div>
-  </div>
+  <!-- </div> -->
 </header>
