--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -1,5 +1,20 @@
 <section class="main">
   <div class="wrapper">
+    <div class="button r" id="theme-toggle-btn">
+      <input type="checkbox" class="checkbox" >
+      <div class="knobs"></div>
+      <div class="layer"></div>
+      <div class="sun-moon-container">
+        <svg class="sun" width="24" height="24">
+          <use href="../src/images/icons.svg#icon-sun"></use>
+        </svg>
+        <svg class="moon" width="24" height="24">
+          <use href="../src/images/icons.svg#icon-moon"></use>
+        </svg>
+
+      </div>
+    </div>
+
     <h1 class="visually-hidden">Filmoteka</h1>
     <ul class="film-list"></ul>
     <div id="tui-pagination-container" class="tui-pagination tui-pagination--js"></div>
