--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
   margin-left: auto;
   margin-right: auto;
-  background-color: $sec-bg-color;
+  background-color: var(--footer-background-color);
   padding: 29px 0 30px 0;
   @media screen and (min-width: 768px) {
         padding: 30px 0 28px 0;
@@ -14,7 +14,7 @@
 
   line-height: 1.14;
   text-align: center;
-  color: $gray-color;
+  color: var(--footer-text-color);
   &>span {
     margin: 0 10px 0 10px;
     display: inline-flex;
@@ -34,7 +34,7 @@
   }
 }
 .footer__link {
-  color: $gray-color;
+  color: var(--footer-link-color);
   @media screen and (min-width: 768px) {
     font-size: 16px;
   }
