--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -1,10 +1,117 @@
-.film-list__item-rating {
+
+.main {
+  padding-top: 60px;
+  padding-bottom: 50px;
+  background-color: var(--main-background-color);
+}
+
+// =============== Film-cards-styles =============//
+
+.film-list {
+  @media screen and (max-width: 767px){
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  @media screen and (min-width: 768px){
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: -30px;
+      margin-left: -30px;
+  }
+    
+}
+  .film-list__item:not(:last-child) {
+  @media screen and(max-width: 767px){
+    margin-bottom: 20px;
+
+  }
+}
+
+.film-list__item {
+  @media screen and(max-width: 767px) {
+    max-width: 280px;
+  }
+
+  @media screen and(min-width: 768px) {
+      flex-basis: calc((100% - 60px) / 2);
+      margin-top: 30px;
+      margin-left: 30px;
+  }
+
+  @media screen and(min-width: 1024px) {
+      flex-basis: calc((100% - 90px) / 3);
+  }
+
+  @media screen and(min-width: 1440px) {
+      flex-basis: calc((100% - 120px) / 4);
+  }
+  
+}
+
+// .film-list__item-rating {
+//   font-weight: 500;
+//   font-size: 12px;
+//   line-height: 14px;
+//   padding: 2px 10px;
+//   margin-left: 10px;
+//   background-color: #ff6b08;
+//   color: #ffffff;
+//   border-radius: 5px;
+// }
+.list-item__link {
+  display: block;
+  text-decoration: none;
+  height: 100%;
+  transition: .3s;
+  &:hover,
+  &:focus {
+    box-shadow:10px 10px 50px var(--shadow-color);
+    border-radius: 5px;
+  }
+  
+}
+
+.list-item__thumb {
+  height: 400px;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  background-image: url(../images/default_image.jpg);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.list-item__img {
+  height: 100%;
+  width: 100%;
+  transform: scale(1);
+  transition: transform 500ms ease-out;
+  object-fit: fill;
+  
+  &:hover,
+  &:focus {
+    transform: scale(1.1);
+  }
+}
+
+.list-item__content {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 5px;
+  
   font-weight: 500;
   font-size: 12px;
-  line-height: 14px;
-  padding: 2px 10px;
-  margin-left: 10px;
-  background-color: #ff6b08;
-  color: #ffffff;
-  border-radius: 5px;
+  line-height: 1.17;
+  text-transform: uppercase;
+  
+  color: var(--text-color);
 }
+
+.list-item__text {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.33;
+  
+  color: var(--accent-color);
+}
+
