--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,11 +2,14 @@
 $black-color: #000000;
 $white-color: #ffffff;
 $gray-color: #545454;
+$light-gray-color: rgba(128, 128, 128, 0.719);
 $orange-color: #FF6B08;
+$light-orange-color: rgba(233, 137, 48, 0.719);
 $red-color: #FF001B;
 $prim-bg-color: #E5E5E5;
 $sec-bg-color: #F7F7F7;
-
+$dark-bg-color: #262626;
+$light-dark-bg-color: #242424; 
 
 
 //Fonts variables
