--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -118,8 +118,8 @@
   height: 20px;
   cursor: pointer;
 }
-.modal-wrapper {
-}
+// .modal-wrapper {
+// }
 .modal__table-wrap {
   margin-bottom: 21px;
 }
