--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -1,7 +1,10 @@
 <a href="#" class="modal__link js-info-modal-open" data-modal="card-film"></a>
 <div class="overlay js-info-modal-overlay"></div>
 <div class="modal js-info-modal" data-info-modal="card-film">
-  <img class="js-info-modal-close close-cross" src="./images/cross-close.svg" />
+<!--  <svg class="js-info-modal-close close-cross" alt="img" src="./images/icons.svg#icon-close"></svg>-->
+  <svg class="js-info-modal-close close-cross" alt="img" src="./images/icons.svg#icon-close">
+    <use   href="./images/icons.svg#icon-close"></use>
+  </svg>
   <div class="info-modal-wrapper"></div>
   <div class="modal-add-btns">
     <button class="add-btn trailer-btn">Trailer</button>
