--- a/src/partials/trailer-modal.html
+++ b/src/partials/trailer-modal.html
@@ -2,7 +2,7 @@
   <div class="trailer__modal">
     <button class="close-trailer-btn" type="button">
       <svg class="close-button__icon" width="18px" height="18px">
-        <use href="./images/icons.svg#icon-love"></use>
+        <use href="./images/icons.svg#cross"></use>
       </svg>
     </button>
     <div class="trailer__thumb"></div>
