--- a/src/sass/partials/_trailer-modal.scss
+++ b/src/sass/partials/_trailer-modal.scss
@@ -17,7 +17,7 @@
   max-width: 750px;
   max-height: 100vh;
   overflow-y: auto;
-  padding: 40px;
+  padding: 20px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #000;
@@ -33,13 +33,12 @@
   height: 100%;
   background-color: #000;
   background-repeat: no-repeat;
-  img {
-    object-fit: fill;
-  }
+  background-size: contain;
 }
 
 iframe {
   width: 700px;
+  height: 550px;
 }
 
 .close-trailer-btn {
