add hover efects for dark theme

--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -2,7 +2,7 @@
   margin: 0 auto;
   // height: 230px;
   // max-width: 320px;
-  padding: 46px 20px 0 20px;
+  padding: 46px 0 0 0;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
