--- a/src/sass/partials/_pagination.scss
+++ b/src/sass/partials/_pagination.scss
@@ -14,7 +14,7 @@
   width: 40px !important;
   height: 40px !important;
   display: flex !important;
-  color: #000 !important;
+  color: rgb(61, 61, 61) !important;
   vertical-align: middle;
   font-size: 15px !important;
   line-height: 1.5 !important;
