--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -27,6 +27,28 @@
   display: none;
 }
 
+.modal::after {
+  position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background: rgb(27, 27, 27);
+    z-index: -1;
+    display: none;
+    border-radius: 5px;
+    animation: animate 5s linear infinite;
+    
+    box-shadow: 0px 0px 15px 4px #ec640a;
+}
+.dark .modal::after {
+    display: block;
+    animation: animate 4s linear infinite;
+    
+    box-shadow: 0px 0px 15px 5px #ec640a;
+}
+
 .modal__img{
   @media screen and (min-width: 1024px) {
     object-fit: fill;
@@ -120,6 +142,7 @@
   width: 20px;
   height: 20px;
   cursor: pointer;
+  filter: invert(100%);
 }
 // .modal-wrapper {
 // }
@@ -195,7 +218,7 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-  color: #8C8C8C;
+  color: var(--text-color);
 
 }
 
@@ -210,7 +233,7 @@
   line-height: 14px;
 
   display: contents;
-  color: #000000;
+  color: var(--text-color);
 }
 
 
