--- a/src/sass/partials/_main.scss
+++ b/src/sass/partials/_main.scss
@@ -3,6 +3,7 @@
   padding-top: 60px;
   padding-bottom: 50px;
   background-color: var(--main-background-color);
+  transition: var(--transition-delay);
 }
 
 // =============== Film-cards-styles =============//
@@ -89,7 +90,7 @@
 
 }
 
-.dark .list-item__link:focus::after,
+// .dark .list-item__link:focus::after,
 .dark .list-item__link:hover::after {
   display: block;
   animation: animate 5000ms linear infinite;
@@ -97,6 +98,7 @@
   box-shadow: 0px 0px 15px 5px #ec640a;
       
 }
+
 @keyframes animate {
   from {
     filter: hue-rotate(0deg);
