--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -142,7 +142,7 @@
   width: 20px;
   height: 20px;
   cursor: pointer;
-  filter: invert(100%);
+  
 }
 // .modal-wrapper {
 // }
@@ -196,6 +196,7 @@
 
   }
   &:hover, :focus {
+
     box-shadow: 0px 0px 10px 5px rgba(247, 133, 4, 0.5);
   }
   @media screen and (min-width: 768px) {
@@ -209,6 +210,13 @@
     padding: 0 15px;
 
   }
+}
+
+
+.dark .add-btn:hover {
+  animation: animate 5000ms linear infinite;
+  box-shadow: 0px 0px 15px 5px #ec640a;
+  
 }
 
 
