--- a/src/sass/partials/_trailer-modal.scss
+++ b/src/sass/partials/_trailer-modal.scss
@@ -17,7 +17,7 @@
   max-width: 750px;
   max-height: 100vh;
   overflow-y: auto;
-  padding: 20px;
+  padding: 15px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #000;
@@ -38,7 +38,11 @@
 
 iframe {
   width: 700px;
-  height: 550px;
+  height: 500px;
+  @media screen and (min-width: 1200px) {
+    max-width: 750px;
+    height: 520px;
+  }
 }
 
 .close-trailer-btn {
