add lost rating

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
 
 // Components
 @import './components/theme-toggle-btn';
+@import './components/rating-span';
 
 // Partials
 @import './partials/header';
