wrap rating and votes in div

--- a/src/partials/trailer-modal.html
+++ b/src/partials/trailer-modal.html
@@ -8,3 +8,22 @@
     <div class="trailer__thumb"></div>
   </div>
 </div>
+
+<ul class="modal__list">
+  <li class="modal__list-item">
+    Vote / Votes
+    <div class="modal__list-item">
+      <span class="rating-span">${rating}</span>/<span>${count}</span>
+    </div>
+  </li>
+
+  <li class="modal__list-item">
+    Popularity<span class="modal__list-item_value">${popularity}</span>
+  </li>
+
+  <li class="modal__list-item">
+    Original Title<span class="modal__list-item_value original-title">${original}</span>
+  </li>
+
+  <li class="modal__list-item">Genres<span class="modal__list-item_value">${genres}</span></li>
+</ul>
