--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -5,7 +5,14 @@
         <svg width="14" height="13">
           <use href="../src/images/icons.svg#icon-love"></use>
         </svg></span>by
-      <a class="footer__link" href="./">GoIT Students</a>
+      <a class="footer__link" href="#">GoIT Students</a>
     </p>
+  </div>
+  <div class="js-modal-about-us">
+    <ul>
+      <li>
+        <img class="#" src="#" />
+      </li>
+    </ul>
   </div>
 </footer>
