--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -2,7 +2,7 @@
 <div class="overlay js-info-modal-overlay"></div>
 <div class="modal js-info-modal" data-info-modal="card-film">
 <!--  <svg class="js-info-modal-close close-cross" alt="img" src="./images/icons.svg#icon-close"></svg>-->
-    <svg class="js-info-modal-close close-cross" alt="img"">
+    <svg class="js-info-modal-close close-cross" alt="img">
     <use   href="./images/icons.svg#icon-Vector"></use>
   </svg>
   <div class="info-modal-wrapper"></div>
