--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -307,6 +307,11 @@
   color: #ffffff;
 }
 
-.rating-span{
+.description-card{
+  height: 236px;
+  overflow-y: scroll;
+}
 
+.description-card::-webkit-scrollbar {
+  width: 0;
 }
