--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,16 +3,9 @@
     <p class="footer__text">
       &#169; 2021 | All Rights Reserved | Developed with<span>
         <svg width="14" height="13">
-          <use href="../src/images/icons.svg#icon-love"></use>
-        </svg></span>by
+          <use href="../src/images/icons.svg#icon-love"></use></svg></span
+      >by
       <a class="footer__link" href="#">GoIT Students</a>
     </p>
-  </div>
-  <div class="js-modal-about-us">
-    <ul>
-      <li>
-        <img class="#" src="#" />
-      </li>
-    </ul>
   </div>
 </footer>
