Change about us (not end)

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,4 +12,4 @@
 @import './partials/trailer-modal';
 @import './partials/film-card-template';
 @import './partials/pagination';
-// @import './partials/about-us';
+@import './partials/about-us';
