--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,8 +35,17 @@
     </div>
 
     <label id="switch" class="switch">
-      <input class="switcher" type="checkbox" id="slider" checked>
+      <input class="switcher" type="checkbox" id="slider" checked />
       <span class="slider round"></span>
-  </label>
+    </label>
+    <select
+      class="language-select"
+      name="language"
+      onchange="localStorage.setItem('language', JSON.stringify(`${this.options[this.selectedIndex].value}`));location.reload()"
+    >
+      <option value="en">En</option>
+      <option value="ru">Ru</option>
+      <option value="uk">Uk</option>
+    </select>
   </div>
 </header>
