--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 // Components
 @import './components/theme-toggle-btn';
 @import './components/rating-span';
+@import './components/select';
 
 // Partials
 @import './partials/header';
@@ -24,4 +25,3 @@
 @import './partials/pagination';
 
 // @import './partials/about-us';
-
