--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -1,4 +1,4 @@
-<div id="about-us" class="about-us__visible">
+<!-- <div id="about-us" class="about-us__visible">
     <div class="js-modal-about-us gallery">
         <h1 class="our-team">Работа нашей команды</h1>
         <ul class="about-us__position">
@@ -14,4 +14,41 @@
             </li>
         </ul>
     </div>
+</div> -->
+
+
+<!-- Trigger/Open The Modal -->
+<!-- <button id="myBtn">Open Modal</button> -->
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content">
+        <div class="modal-header">
+            <span class="close">&times;</span>
+            <h2>Работа нашей команды</h2>
+        </div>
+        <div class="modal-body">
+            <a class='btn btn-primary' href="#"><img class="member-photo" src="./images/member_logo.jpg" alt="AlexNumo" /></a>
+            <div class="member-info-position">
+                <h3>AlexNumo</h3>
+                <ul class="info-about-member-work">
+                    <li class="about-us-marker">
+                        <p>Падающий снег</p>
+                    </li>
+                    <li class="about-us-marker">
+                        <p>Работа нашей команды</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <a class="btn btn-primary alex-numo" href='#'><img class="member-photo-icon" src='./images/member_logo.jpg'></a>
+            <a class="btn btn-primary sergyi" href='#'><img class="member-photo-icon"
+                    src='./images/member_logo.jpg'></a>
+        </div>
+    </div> 
+    <!-- </div> style="pointer-events: none" -->
+
 </div>
