--- a/src/partials/snow.html
+++ b/src/partials/snow.html
@@ -1,9 +1,9 @@
-<script>////////////////////////
+<!-- <script>////////////////////////
     ///////// Настройки
     ////////////////////////
 
     // количество снежинок, которое будет на экране одновременно.
-    let snowmax = 40
+    let snowmax = 0
 
     // Цвета для снежинок. Для каждой конкретной снежинки цвет выбирается случайно из этого массива.
     let snowcolor = new Array("#b9dff5", "#7fc7ff", "#7fb1ff", "#7fc7ff", "#b9dff5")
@@ -90,4 +90,4 @@
     for (i = 0; i <= snowmax; i++) {
         document.body.insertAdjacentHTML('beforeend', "<span id='s" + i + "' style='user-select:none;position:fixed;top:-" + snowmaxsize + "'>" + snowletter + "</span>")
     }
-    window.onload = initsnow</script>
+    window.onload = initsnow</script> -->
