--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -21,6 +21,7 @@
 @import './partials/footer';
 @import './partials/modal';
 @import './partials/trailer-modal';
+@import './partials/about-us';
 // @import './partials/film-card-template';
 @import './partials/pagination';
 @import './partials/about-us';
