--- a/src/sass/partials/_about-us.scss
+++ b/src/sass/partials/_about-us.scss
@@ -1,42 +1,42 @@
-.js-modal-about-us {
-  display: inline;
-  width: 1000px;
-  height: 400px;
-  position: absolute;
-  margin-left: 200px;
-  padding: 20px 20px 20px 20px;
-  box-shadow: 3px 3px red, -1em 0 0.4em olive;
-  text-align: center;
-}
+// .js-modal-about-us {
+//   display: inline;
+//   width: 1000px;
+//   height: 400px;
+//   position: absolute;
+//   margin-left: 200px;
+//   padding: 20px 20px 20px 20px;
+//   box-shadow: 3px 3px red, -1em 0 0.4em olive;
+//   text-align: center;
+// }
 
-.about-us__visible {
-  display: none;
-  flex-direction: column;
-  width: inherit;
-  height: 400px;
-}
+// .about-us__visible {
+//   display: none;
+//   flex-direction: column;
+//   width: inherit;
+//   height: 400px;
+// }
 
 .member-photo {
-  width: 200px;
-  height: 250px;
+  width: 100px;
+  height: 130px;
   border-radius: 50%;
 }
 
-.member-photo__position {
-  // margin-left: -200px;
-  display: flex;
-}
+// .member-photo__position {
+//   // margin-left: -200px;
+//   display: flex;
+// }
 
-.info-about-member {
-  padding-left: 60px;
-  text-align: center;
-  width: 100%;
-  font-size: 25px;
-}
+// .info-about-member {
+//   padding-left: 60px;
+//   text-align: center;
+//   width: 100%;
+//   font-size: 25px;
+// }
 
-.info-about-member h2 {
-  color: lightcoral;
-}
+// .info-about-member h2 {
+//   color: lightcoral;
+// }
 
 .info-about-member-work {
   display: flex;
@@ -48,15 +48,135 @@
   list-style-type: disc !important;
 }
 
-.about-us__position {
-  // display: flex;
-  // flex-direction: row;
-  padding-top: 20px;
+// .about-us__position {
+//   // display: flex;
+//   // flex-direction: row;
+//   padding-top: 20px;
+// }
+
+// .our-team {
+//   display: block;
+//   margin-left: auto;
+//   margin-right: auto;
+//   font-size: 45px;
+// }
+
+.member-photo-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 
-.our-team {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 45px;
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 650px;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  -webkit-animation-name: fadeIn; /* Fade in the background */
+  -webkit-animation-duration: 0.4s;
+  animation-name: fadeIn;
+  animation-duration: 0.4s;
+}
+
+/* Modal Content */
+.modal-content {
+  position: fixed;
+  bottom: 0;
+  background-color: #fefefe;
+  width: 100%;
+  -webkit-animation-name: slideIn;
+  -webkit-animation-duration: 0.4s;
+  animation-name: slideIn;
+  animation-duration: 0.4s;
+}
+
+/* The Close Button */
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+}
+
+.modal-body {
+  padding: 2px 16px;
+  display: flex;
+  // flex-wrap: wrap;
+  // width: 300px;
+}
+
+.member-info-position {
+  padding-left: 30px;
+}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #5cb85c;
+  color: white;
+  display: flex;
+}
+
+.btn-primary {
+  padding-left: 15px;
+}
+
+/* Add Animation */
+@-webkit-keyframes slideIn {
+  from {
+    bottom: -300px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes slideIn {
+  from {
+    bottom: -300px;
+    opacity: 0;
+  }
+  to {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
