--- a/src/sass/components/_select.scss
+++ b/src/sass/components/_select.scss
@@ -7,6 +7,6 @@
   height: 30px;
   z-index: 30;
   border-radius: 5px;
-  background-color: $orange-color;
-  font-weight: 700;
+  background-color: #954909;
+  font-weight: 500;
 }
