--- a/src/sass/partials/_modal.scss
+++ b/src/sass/partials/_modal.scss
@@ -1,4 +1,4 @@
-.body-hidden{
+.body-hidden {
   overflow-y: hidden;
 }
 
@@ -13,12 +13,10 @@
   @media screen and (min-width: 768px) {
     width: 618px;
     padding: 42px 30px 40px 28px;
-
   }
-  @media screen and(min-width: 1024px){
+  @media screen and(min-width: 1024px) {
     width: 882px;
     padding: 50px 30px 40px 30px;
-
   }
   transform: translate(-50%, -50%);
   padding: 48px 20px 41px 20px;
@@ -42,17 +40,14 @@
   animation: animate 5s linear infinite;
 
   box-shadow: 0px 0px 15px 4px #ec640a;
-  
 }
 .dark .modal::after {
- 
-    display: block;
-    animation: animate 4s linear infinite;
-    box-shadow: 0px 0px 15px 5px #ec640a;
- 
+  display: block;
+  animation: animate 4s linear infinite;
+  box-shadow: 0px 0px 15px 5px #ec640a;
 }
 
-.modal__img{
+.modal__img {
   @media screen and (min-width: 1024px) {
     object-fit: fill;
     display: block;
@@ -61,18 +56,17 @@
   border-radius: 5px;
 }
 
-.modal__card-img{
+.modal__card-img {
   @media screen and (min-width: 768px) {
     width: 294px;
     margin-right: 30px;
   }
   @media screen and (min-width: 1024px) {
     width: 396px;
-
   }
 }
 
-.modal__table-wrap{
+.modal__table-wrap {
   margin-top: 30px;
   @media screen and (min-width: 768px) {
     width: 294px;
@@ -80,11 +74,10 @@
   }
   @media screen and (min-width: 1024px) {
     width: 396px;
-
   }
 }
 
-.card-title{
+.card-title {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -94,7 +87,7 @@
   color: var(--text-color);
 }
 
-.about{
+.about {
   margin-top: 20px;
 
   font-family: Roboto;
@@ -103,21 +96,16 @@
   font-size: 12px;
   line-height: 20px;
   color: var(--text-color);
-
 }
 
+.info-modal-wrapper {
+  overflow-y: scroll;
+  max-height: 86vh;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 
-
-
-
-.info-modal-wrapper{
-    overflow-y: scroll;
-    max-height: 86vh;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 768px) {
     display: flex;
     justify-content: space-evenly;
     overflow-y: auto;
@@ -129,12 +117,7 @@
     width: 0;
     height: 0;
   }
-
 }
-
-
-
-
 
 .overlay {
   position: fixed;
@@ -159,13 +142,11 @@
   width: 20px;
   height: 20px;
   cursor: pointer;
-
 }
 
 .modal__table-wrap {
   //margin-bottom: 21px;
   @media screen and (min-width: 768px) {
-
     //padding-top: 20px;
   }
 }
@@ -179,18 +160,14 @@
   }
 }
 
-
-
 .dark .add-btn:hover {
   animation: animate 5000ms linear infinite;
   box-shadow: 0px 0px 15px 5px #ec640a;
-
 }
 
-
-.modal__list-item{
+.modal__list-item {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -198,33 +175,32 @@
   line-height: 16px;
   color: var(--text-color);
 }
-.modal__list-item:not(:last-child){
+.modal__list-item:not(:last-child) {
   margin-bottom: 10px;
 }
 
-.modal__text{
+.modal__text {
   display: inline-block;
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-  color: #8C8C8C;
-
+  color: #8c8c8c;
 }
 
-.modal__list-item_value{
+.modal__list-item_value {
   margin-right: 40px;
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
+  text-transform: capitalize;
   font-size: 12px;
   line-height: 14px;
   color: var(--text-color);
 }
 
-
-.original-title{
+.original-title {
   display: contents;
   text-transform: uppercase;
 }
@@ -242,12 +218,12 @@
   border-radius: 5px;
   padding: 0;
   margin-right: 15px;
-  @media screen and(min-width: 768px){
+  @media screen and(min-width: 768px) {
     margin-right: 35px;
   }
   background-color: $orange-color;
   border: none;
-  transition: box-shadow 250ms cubic-bezier(.17,.67,.83,.67);
+  transition: box-shadow 250ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
 
   &.queue-btn {
     margin-right: 15px;
@@ -260,10 +236,9 @@
     background-color: $black-color;
     color: $white-color;
     border: 1px solid $black-color;
-
   }
-  &:hover, :focus {
-
+  &:hover,
+  :focus {
     box-shadow: 0px 0px 10px 5px rgba(247, 133, 4, 0.5);
   }
   @media screen and (min-width: 768px) {
@@ -275,11 +250,10 @@
   }
   @media screen and (max-width: 480px) {
     //padding: 0 15px;
-
   }
 }
 
-.watched-btn{
+.watched-btn {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -289,10 +263,10 @@
   align-items: center;
   text-align: center;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
-.queue-btn{
+.queue-btn {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
@@ -306,13 +280,12 @@
   color: #000000;
 }
 
-.trailer-btn{
+.trailer-btn {
   font-family: Roboto;
   font-style: normal;
   font-weight: 500;
   font-size: 12px;
   line-height: 16px;
-
 
   display: flex;
   align-items: center;
@@ -322,7 +295,7 @@
   color: #ffffff;
 }
 
-.description-card{
+.description-card {
   max-height: 236px;
   overflow-y: scroll;
 }
@@ -331,8 +304,6 @@
   width: 0;
 }
 
-
-.hei{
+.hei {
   min-height: 100%;
 }
-
