--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -20,6 +20,8 @@
 <!-- Trigger/Open The Modal -->
 <!-- <button id="myBtn">Open Modal</button> -->
 
+
+
 <!-- The Modal -->
 <div id="myModal" class="modal">
 
@@ -45,10 +47,19 @@
         </div>
         <div class="modal-footer">
             <a class="btn btn-primary alex-numo" href='#'><img class="member-photo-icon" src='./images/member_logo.jpg'></a>
-            <a class="btn btn-primary sergyi" href='#'><img class="member-photo-icon"
-                    src='./images/member_logo.jpg'></a>
+            <a class="btn btn-primary sergyi" href='#'><img class="member-photo-icon" src='./images/member_logo.jpg'></a>
         </div>
     </div> 
-    <!-- </div> style="pointer-events: none" -->
+    </div> 
+    <!-- style="pointer-events: none" -->
 
-</div>
+<!-- </div> -->
+
+
+<!-- <div class="gallery">
+    <button type="button" id="myButton"></button>
+    <a href="./images/member_logo.jpg"><img src="./images/member_logo.jpg" width="10%" height="10%" alt="AlexNumo" title="AlexNumo - падающий снег, секция наша команда" /></a>
+    <a href="./images/member_logo.jpg"><img src="./images/member_logo.jpg" width="10%" height="10%" alt="Sergyi" title="Beautiful Image" /></a>
+    <a href="./images/member_logo.jpg"><img src="./images/member_logo.jpg" width="10%" height="10%" alt="Sergyi" title="Beautiful Image" /></a>
+    <a href="./images/member_logo.jpg"><img src="./images/member_logo.jpg" width="10%" height="10%" alt="Sergyi" title="Beautiful Image" /></a>
+</div> -->
