--- a/src/sass/partials/_about-us.scss
+++ b/src/sass/partials/_about-us.scss
@@ -16,11 +16,11 @@
 //   height: 400px;
 // }
 
-.member-photo {
-  width: 100px;
-  height: 130px;
-  border-radius: 50%;
-}
+// .member-photo {
+//   width: 100px;
+//   height: 130px;
+//   border-radius: 50%;
+// }
 
 // .member-photo__position {
 //   // margin-left: -200px;
@@ -38,15 +38,15 @@
 //   color: lightcoral;
 // }
 
-.info-about-member-work {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
+// .info-about-member-work {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: flex-start;
+// }
 
-.about-us-marker {
-  list-style-type: disc !important;
-}
+// .about-us-marker {
+//   list-style-type: disc !important;
+// }
 
 // .about-us__position {
 //   // display: flex;
@@ -61,11 +61,11 @@
 //   font-size: 45px;
 // }
 
-.member-photo-icon {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-}
+// .member-photo-icon {
+//   width: 50px;
+//   height: 50px;
+//   border-radius: 50%;
+// }
 
 /* The Modal (background) */
 .modal {
@@ -138,6 +138,28 @@
 
 .btn-primary {
   padding-left: 15px;
+}
+
+.member-photo {
+  width: 100px;
+  height: 130px;
+  border-radius: 50%;
+}
+
+.member-photo-icon {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.info-about-member-work {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.about-us-marker {
+  list-style-type: disc !important;
 }
 
 /* Add Animation */
